--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "marco-xmd",
+  "name": "whatsapp-md-multisession",
   "version": "1.0.0",
-  "description": "WhatsApp Bot by Mr Marco",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "latest",
-    "axios": "^1.6.2",
-    "express": "^4.18.2",
-    "pino": "^8.14.1",
-    "qrcode-terminal": "^0.12.0",
-    "yt-search": "latest",
-    "ytdl-core": "latest",
-    "fs-extra": "^11.1.1"
+    "@whiskeysockets/baileys": "6.6.0",
+    "drizzle-orm": "0.30.10",
+    "drizzle-zod": "0.5.1",
+    "pg": "8.11.3",
+    "zod": "3.22.4",
+    "express": "4.19.2",
+    "pino": "8.17.0"
   }
 }
